--- a/gwt-webapp/src/main/resources/com/provectus/taxmanagement/client/ui/presenter/layout/FullScreenLayoutView.ui.xml
+++ b/gwt-webapp/src/main/resources/com/provectus/taxmanagement/client/ui/presenter/layout/FullScreenLayoutView.ui.xml
@@ -21,11 +21,11 @@
 
         .content {
             margin-top: 5px;
-            padding: 10px;
-            border-radius: 10px;
-            height: auto;
-            background: #ffffff;
-            border: 1px solid #bdbdbd;
+            /*padding: 10px;*/
+            /*border-radius: 10px;*/
+            /*height: auto;*/
+            /*background: #ffffff;*/
+            /*border: 1px solid #bdbdbd;*/
         }
     </ui:style>
 
